# whisper-typer

./: .gitignore  CMakeLists.txt  DEVELOPMENT_HISTORY.md  LICENSE  README.md  install.sh  security_concerns.md
.github/workflows/: build.yml
.scc/status/: plan-libei-backend.md  project.md
archive/: index.md  plan-desktop-integration.md  plan-imgui-window.md  plan-libei-backend.md
contrib/: whisper-typer-autostart.desktop  whisper-typer.desktop  whisper-typer.service
src/: hotkey.cpp  hotkey.h  keymap.h  libei-kbd.cpp  libei-kbd.h  text-output.cpp  text-output.h  tray.cpp  tray.h  typer.cpp  window.cpp  window.h  window_logic.cpp
tests/: test_check_dep.cpp  test_history.cpp  test_hotkey.cpp  test_parsers.cpp  test_terminal.cpp  test_uinput_keymap.cpp  test_window.cpp  test_zombie.cpp
